# snaggy

./: .env.example  .gitignore  Cargo.toml  README.md  index.html  package.json  vite.config.ts
.github/workflows/: release.yml
crates/snaggy-core/: Cargo.toml
crates/snaggy-core/src/: config.rs  scanner.rs
crates/snaggy-server/: Cargo.toml
crates/snaggy-server/src/: main.rs
scripts/: generate-icons.mjs
src/: App.tsx  env.d.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  scanner.rs
src/components/: auth-guard.tsx  favicon-grid.tsx  font-list.tsx  login-page.tsx  scan-results.tsx  theme-toggle.tsx  url-input.tsx  user-menu.tsx
src/hooks/: use-auth.ts  use-scan.ts  use-theme.tsx
src/lib/: api.ts  auth.ts  mock-auth.ts  types.ts
