[package]
name = "snaggy"
version = "1.0.0"
description = "Website font & favicon extractor"
authors = ["jacobwi"]
license = "MIT"
repository = "https://github.com/jacobwi/snaggy"
edition = "2024"
rust-version = "1.85.0"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
snaggy-core = { path = "../crates/snaggy-core" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
