[package]
name = "snaggy-core"
version = "1.0.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
scraper = "0.25"
url = "2"
regex = "1"
base64 = "0.22"
tokio = { version = "1", features = ["fs", "rt"] }
