[package]
name = "snaggy-server"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "snaggy-server"
path = "src/main.rs"

[dependencies]
snaggy-core = { path = "../snaggy-core" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6", features = ["cors", "fs"] }
